<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Show Me Your Money</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="hello_world">Hello world!</string>

    <!-- custom string -->
    <string name="title_app">Show Me Your Money</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="about_us">About Us</string>
    <string name="title_account">Account</string>
    <string name="title_expense">Expense</string>
    <string name="title_history">History</string>
    <string name="title_activity_create_account">CreateAccount</string>
    <string name="title_create_account">Create Account</string>
    <string name="title_activity_create_expense">CreateExpense</string>
    <string name="title_update_expense">Update Expense</string>
    <string name="title_create_expense">Create Expense</string>
    <string name="title_create_expense_once">Once</string>
    <string name="title_create_expense_daily">Daily</string>
    <string name="title_create_expense_monthly">Monthly</string>
    <string name="title_create_expense_weekly">Weekly</string>

    <string-array name="type_array">
        <item>Food</item>
        <item>Transport</item>
        <item>Entertainment</item>
        <item>Communication</item>
        <item>Housing</item>
        <item>Other</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test_activity2">TestActivity2</string>
    <string name="title_activity_set_preference">SetPreferenceActivity</string>
    <string name="text_color_dark_blue">Blue (Default)</string>
    <string name="text_color_pink">Pink</string>
    <string name="text_color_purple">Purple</string>
    <string name="text_color_light_blue">Light Blue</string>
    <string name="text_color_green">Green</string>
    <string name="text_color_orange">Orange</string>
    <string name="text_color_dark">Dark</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_select_color">Select theme color</string>

    <string name="title_activity_pie_chart">Report</string>
    <string name="TitleOverview">Overview</string>
    <string name="reportFood">Food</string>
    <string name="reportTransport">Transport</string>
    <string name="reportEntertainment">Entertainment</string>
    <string name="reportCommunication">Communication</string>
    <string name="reportHousing">Housing</string>
    <string name="reportOther">Other</string>
    <string name="percentFood" />
    <string name="percentTransport" />
    <string name="percentEntertainment" />
    <string name="percentCommunication" />
    <string name="percentHousing" />
    <string name="percentOther" />
    <string name="title_View">View:</string>
    <string name="displayDate" />
    <string name="displayDateRange">Date :</string>

    <string-array name="Type_report_view">
        <item>Today</item>
        <item>This Week</item>
        <item>This Month</item>
    </string-array>

</resources>
