<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="View"
            android:id="@+id/textView8"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerReportView"
            android:spinnerMode="dropdown"
            android:background="#78909c"
            android:layout_below="@+id/textView8" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="333dp"
            android:layout_height="333dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
            android:id="@+id/pane"
            android:orientation="horizontal"
            android:layout_row="0"
            android:layout_column="0"

            android:layout_below="@+id/spinnerReportView"
            android:layout_toRightOf="@+id/textView8"
            android:layout_toEndOf="@+id/textView8"
            android:layout_weight="0.56">

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/displayDateRange"
            android:id="@+id/textDateRange"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/displayDate"
            android:id="@+id/textDisplayDate"
            android:layout_below="@+id/pane"
            android:layout_centerHorizontal="true" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:isScrollContainer="true"
            android:id="@+id/tableLayout"
            android:layout_below="@+id/pane"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="32dp">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/reportFood"
                    android:id="@+id/textView21"
                    android:layout_column="2"
                    android:background="#3F51B5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/percentFood"
                    android:id="@+id/textViewFood"
                    android:layout_column="3"
                    android:background="#3F51B5" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/reportTransport"
                    android:id="@+id/textView24"
                    android:layout_column="2"
                    android:background="#e91e63" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/percentTransport"
                    android:id="@+id/textViewTransport"
                    android:layout_column="3"
                    android:background="#e91e63" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/reportEntertainment"
                    android:id="@+id/textView25"
                    android:layout_column="2"
                    android:background="#9c27b0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/percentEntertainment"
                    android:id="@+id/textViewEntertainment"
                    android:layout_column="3"
                    android:background="#9c27b0" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/reportCommunication"
                    android:id="@+id/textView26"
                    android:layout_column="2"
                    android:background="#2196f3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/percentCommunication"
                    android:id="@+id/textViewCommunication"
                    android:layout_column="3"
                    android:background="#2196f3" />

            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/reportHousing"
                    android:id="@+id/textView27"
                    android:layout_column="2"
                    android:background="#009688" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/percentHousing"
                    android:id="@+id/textViewHousing"
                    android:layout_column="3"
                    android:background="#009688" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/reportOther"
                    android:id="@+id/textView28"
                    android:layout_column="2"
                    android:background="#FF9800" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/percentOther"
                    android:id="@+id/textViewOther"
                    android:layout_column="3"
                    android:background="#FF9800" />

            </TableRow>

        </TableLayout>


    </LinearLayout>
</ScrollView>