<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="30dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.bryanty.projectx_smym5.CreateAccountActivity"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_create_expense"
        android:id="@+id/textView15"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Type"
        android:id="@+id/textView16"
        android:layout_below="@+id/textView15"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_expense_type"
        android:spinnerMode="dropdown"
        android:background="#78909c"
        android:layout_below="@+id/textView16"
        android:layout_alignRight="@+id/imageButtonAddExp"
        android:layout_alignEnd="@+id/imageButtonAddExp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Ammount"
        android:id="@+id/textView17"
        android:layout_below="@+id/spinner_expense_type"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editText_ExpAmmount"
        android:layout_below="@+id/textView17"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Repeat"
        android:id="@+id/textView18"
        android:layout_below="@+id/button_set_date"
        android:layout_alignRight="@+id/imageButtonCancelExp"
        android:layout_alignEnd="@+id/imageButtonCancelExp" />

    <RadioGroup
        android:layout_width="150dp"
        android:layout_height="130dp"
        android:id="@+id/radioGroup_repeat"
        android:layout_below="@+id/textView18"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_create_expense_once"
            android:id="@+id/radioButton_once"
            android:checked="true"
            android:textColor="#000" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_create_expense_daily"
            android:id="@+id/radioButton_daily"
            android:checked="false"
            android:textColor="#000" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_create_expense_weekly"
            android:id="@+id/radioButton_weekly"
            android:checked="false"
            android:textColor="#000" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_create_expense_monthly"
            android:id="@+id/radioButton_monthly"
            android:checked="false"
            android:textColor="#000" />

    </RadioGroup>

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText_times"
        android:layout_alignBottom="@+id/radioGroup_repeat"
        android:layout_toRightOf="@+id/radioGroup_repeat"
        android:layout_toEndOf="@+id/radioGroup_repeat"
        android:maxLength="2"
        android:enabled="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="times"
        android:id="@+id/textView19"
        android:layout_alignBottom="@+id/editText_times"
        android:layout_toRightOf="@+id/editText_times"
        android:layout_toEndOf="@+id/editText_times"
        android:textColor="#000" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButtonAddExp"
        android:src="@drawable/ic_check"
        android:background="#DEDEDE"
        android:clickable="true"
        android:scaleType="fitCenter"
        android:minWidth="80dp"
        android:minHeight="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="createAccountClicked" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButtonCancelExp"
        android:src="@drawable/ic_cancel"
        android:background="#DEDEDE"
        android:minHeight="80dp"
        android:minWidth="80dp"
        android:scaleType="fitCenter"
        android:layout_alignTop="@+id/imageButtonAddExp"
        android:layout_alignLeft="@+id/radioGroup_repeat"
        android:layout_alignStart="@+id/radioGroup_repeat" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Set Date"
        android:id="@+id/button_set_date"
        android:onClick="setDate"
        android:background="#78909c"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>